--- a/ja/DestinySeasonDefinition.json
+++ b/ja/DestinySeasonDefinition.json
@@ -78,5 +78,10 @@
     "displayProperties": {
       "name": "Renegades"
     }
+  },
+  "2758726560": {
+    "displayProperties": {
+      "name": "無法のシーズン"
+    }
   }
 }
